--- a/GW_Analysis-ONCV.ipynb
+++ b/GW_Analysis-ONCV.ipynb
@@ -68,14 +68,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initialize a Yambo calculator with scheduler slurm\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'scheduler': 'slurm',\n",
+       " 'nodes': 1,\n",
+       " 'ntasks_per_node': 32,\n",
+       " 'cpus_per_task': 1,\n",
+       " 'omp_num_threads': 1,\n",
+       " 'gpus_per_node': None,\n",
+       " 'memory': '125000',\n",
+       " 'time': None,\n",
+       " 'partition': 'slownodes',\n",
+       " 'account': None,\n",
+       " 'qos': None,\n",
+       " 'map_by': None,\n",
+       " 'pe': 1,\n",
+       " 'rank_by': None,\n",
+       " 'executable': 'yambo',\n",
+       " 'skip': True,\n",
+       " 'clean_restart': True,\n",
+       " 'dry_run': False,\n",
+       " 'wait_end_run': True,\n",
+       " 'activate_BeeOND': True,\n",
+       " 'verbose': True,\n",
+       " 'fatlog': False}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# RunRules for ismhpc\n",
     "# The product of ntasks_per_node*cpus_per_task is equal to 32. \n",
     "# Many mpi are needed for better performances\n",
-    "nodes = 2\n",
+    "nodes = 1\n",
     "ntasks_per_node = 32 #16\n",
     "cpus_per_task = 1 #2\n",
     "omp_num_threads = 1 #2\n",
@@ -93,48 +132,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Initialize a Yambo calculator with scheduler slurm\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'scheduler': 'slurm',\n",
-       " 'nodes': 16,\n",
-       " 'ntasks_per_node': 4,\n",
-       " 'cpus_per_task': 32,\n",
-       " 'omp_num_threads': 8,\n",
-       " 'gpus_per_node': 4,\n",
-       " 'memory': '240GB',\n",
-       " 'time': '23:59:00',\n",
-       " 'partition': 'm100_usr_prod',\n",
-       " 'account': 'IscrC_PrExIn',\n",
-       " 'qos': None,\n",
-       " 'map_by': 'socket',\n",
-       " 'pe': 8,\n",
-       " 'rank_by': 'core',\n",
-       " 'executable': 'yambo',\n",
-       " 'skip': True,\n",
-       " 'clean_restart': True,\n",
-       " 'dry_run': False,\n",
-       " 'wait_end_run': True,\n",
-       " 'activate_BeeOND': False,\n",
-       " 'verbose': True,\n",
-       " 'fatlog': False}"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# RunRules for m100\n",
     "nodes = 16 # 16\n",
@@ -1159,32 +1159,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "kpoints = [42,60,72] #[18,30,42,60,72]"
+    "kpoints = [18] #[42,60,72] #[18,30,42,60,72]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "32 2\n",
+      "16 2\n",
       "Initialize a Dataset with 4 parallel tasks\n",
-      "SAVE folder GW_analysis-ONCV/kpoints_42-nbnds_500/SAVE already present. No operations performed.\n",
-      "SAVE folder GW_analysis-ONCV/kpoints_60-nbnds_500/SAVE already present. No operations performed.\n",
-      "SAVE folder GW_analysis-ONCV/kpoints_72-nbnds_500/SAVE already present. No operations performed.\n"
+      "SAVE folder GW_analysis-ONCV/kpoints_18-nbnds_500/SAVE already present. No operations performed.\n"
      ]
     }
    ],
    "source": [
-    "ntasks_c = 32 #16\n",
+    "ntasks_c = 16 #16\n",
     "ntasks_v = int(ntasks/ntasks_c)\n",
     "print(ntasks_c,ntasks_v)\n",
     "\n",
@@ -1207,10 +1205,10 @@
     "for k in kpoints:\n",
     "    input_dir = 'DFT_analysis-ONCV/kpoints_%s-nbnds_500.save'%k\n",
     "    run_dir = 'GW_analysis-ONCV/kpoints_%s-nbnds_500'%k\n",
-    "    #Tools.init_yambo_dir(yambo_dir=run_dir,input_dir=input_dir)\n",
+    "    Tools.init_yambo_dir(yambo_dir=run_dir,input_dir=input_dir)\n",
     "    #Tools.build_r_setup(yambo_dir=run_dir)\n",
-    "    Tools.init_yambo_dir(yambo_dir=run_dir,input_dir=input_dir,\n",
-    "            p2y_command='mpirun -np 1 p2y',yambo_command='mpirun -np 1 yambo')\n",
+    "    #Tools.init_yambo_dir(yambo_dir=run_dir,input_dir=input_dir,\n",
+    "    #       p2y_command='mpirun -np 1 p2y',yambo_command='mpirun -np 1 yambo')\n",
     "\n",
     "    inp = I.YamboInput(args='mpirun -np 1 yambo -r -k hartee -dyson n -gw0 p -V all',folder=run_dir)\n",
     "    inp.set_extendOut()\n",
@@ -1223,8 +1221,8 @@
     "    inp.set_bandRange(start_band,stop_band)\n",
     "    inp.set_array_variables(units=NGsBlkXp_units,NGsBlkXp=NGsBlkXp)\n",
     "    inp.set_array_variables(BndsRnXp=BndsRnXp,GbndRnge=GbndRnge)\n",
-    "    #inp.set_scalar_variables(SE_ROLEs='q.qp.b',SE_CPU='2.2.16') # for 2 nodes on ismhpc (with 32 mpi and 1 omp per node)\n",
-    "    inp.set_scalar_variables(SE_ROLEs='q.qp.b',SE_CPU='2.2.16') # for 8 nodes on m100\n",
+    "    inp.set_scalar_variables(SE_ROLEs='q.qp.b',SE_CPU='2.1.16') # for 1 nodes on ismhpc (with 32 mpi and 1 omp per node)\n",
+    "    #inp.set_scalar_variables(SE_ROLEs='q.qp.b',SE_CPU='2.2.16') # for 16 nodes on m100\n",
     "    inp.set_scalar_variables(X_and_IO_ROLEs='q.g.k.c.v',X_and_IO_CPU='1.1.1.%s.%s'%(ntasks_c,ntasks_v))\n",
     "    inp.set_scalar_variables(DIP_ROLEs='k.c.v',DIP_CPU='1.%s.%s'%(ntasks_c,ntasks_v))\n",
     "    \n",
@@ -1244,21 +1242,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['pp-G-kpoints_42',\n",
-       " 'pp-K-kpoints_42',\n",
-       " 'pp-G-kpoints_60',\n",
-       " 'pp-K-kpoints_60',\n",
-       " 'pp-G-kpoints_72',\n",
-       " 'pp-K-kpoints_72']"
+       "['pp-G-kpoints_18', 'pp-K-kpoints_18']"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1278,30 +1271,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Run the selection [1, 3, 5] with the parallel task_groups [[1, 3, 5]] \n",
+      "Run the selection [0, 1] with the parallel task_groups [[0, 1]] \n",
       "\n",
-      "Run the task [1, 3, 5] \n",
-      "run command: mpirun -np 64 --map-by socket:PE=8 --rank-by core yambo -F pp-K-kpoints_42.in -J \"pp-K-kpoints_42,ndb_rim_cutoff,ndb_hf_K,ndb_em1d-ngsblkxp_8.0-bndsrnxp_500,ndb_dipoles-nbnds_500\" -C pp-K-kpoints_42\n",
-      "run command: mpirun -np 64 --map-by socket:PE=8 --rank-by core yambo -F pp-K-kpoints_60.in -J \"pp-K-kpoints_60,ndb_rim_cutoff,ndb_hf_K,ndb_em1d-ngsblkxp_8.0-bndsrnxp_500,ndb_dipoles-nbnds_500\" -C pp-K-kpoints_60slurm submit:  \n",
-      "cd GW_analysis-ONCV/kpoints_42-nbnds_500 ; sbatch job_pp-K-kpoints_42.shslurm submit: run command: mpirun -np 64 --map-by socket:PE=8 --rank-by core yambo -F pp-K-kpoints_72.in -J \"pp-K-kpoints_72,ndb_rim_cutoff,ndb_hf_K,ndb_em1d-ngsblkxp_8.0-bndsrnxp_500,ndb_dipoles-nbnds_500\" -C pp-K-kpoints_72\n",
-      " \n",
-      "cd GW_analysis-ONCV/kpoints_60-nbnds_500 ; sbatch job_pp-K-kpoints_60.sh\n",
-      "slurm submit:  cd GW_analysis-ONCV/kpoints_72-nbnds_500 ; sbatch job_pp-K-kpoints_72.sh\n",
-      "computation pp-K-kpoints_42 is running...\n",
-      "computation pp-K-kpoints_60 is running...\n",
-      "computation pp-K-kpoints_72 is running...\n"
+      "Run the task [0, 1] \n",
+      "run command: mpirun -np 32 yambo -F pp-G-kpoints_18.in -J \"pp-G-kpoints_18,ndb_rim_cutoff,ndb_hf_G,ndb_em1d-ngsblkxp_8.0-bndsrnxp_500,ndb_dipoles-nbnds_500\" -C pp-G-kpoints_18\n",
+      "run command: mpirun -np 32 yambo -F pp-K-kpoints_18.in -J \"pp-K-kpoints_18,ndb_rim_cutoff,ndb_hf_K,ndb_em1d-ngsblkxp_8.0-bndsrnxp_500,ndb_dipoles-nbnds_500\" -C pp-K-kpoints_18\n",
+      "slurm submit:  cd GW_analysis-ONCV/kpoints_18-nbnds_500 ; sbatch job_pp-G-kpoints_18.shslurm submit: \n",
+      " cd GW_analysis-ONCV/kpoints_18-nbnds_500 ; sbatch job_pp-K-kpoints_18.sh\n",
+      "computation pp-G-kpoints_18 is running...\n",
+      "computation pp-K-kpoints_18 is running...\n",
+      "computation pp-G-kpoints_18 ended\n",
+      "Run performed in 32m-08s\n",
+      "computation pp-K-kpoints_18 ended\n",
+      "Run performed in 34m-07s\n",
+      "Task [0, 1] ended \n",
+      " \n"
      ]
     }
    ],
    "source": [
-    "results = study.run(selection=[1,3,5])"
+    "results = study.run()"
    ]
   },
   {
@@ -1830,7 +1826,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1844,7 +1840,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
