--- a/GW_Analysis-ONCV.ipynb
+++ b/GW_Analysis-ONCV.ipynb
@@ -1401,31 +1401,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "kpoints = 60\n",
+    "kpoints = 42 #60\n",
     "run_dir = 'GW_analysis-ONCV/kpoints_%s-nbnds_500'%kpoints"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "32 2\n"
+      "32 0\n"
      ]
     },
     {
      "data": {
       "text/plain": [
        "{'args': 'mpirun -np 1 yambo -r -k hartee -dyson n -gw0 p -V all',\n",
-       " 'folder': 'GW_analysis-ONCV/kpoints_60-nbnds_500',\n",
+       " 'folder': 'GW_analysis-ONCV/kpoints_42-nbnds_500',\n",
        " 'filename': 'yambo.in',\n",
        " 'arguments': ['rim_cut',\n",
        "  'em1d',\n",
@@ -1435,13 +1435,13 @@
        "  'ExtendOut',\n",
        "  'RIM_W'],\n",
        " 'variables': {'StdoHash': [40.0, ''],\n",
-       "  'Nelectro': [28.0, ''],\n",
+       "  'Nelectro': [0.0, ''],\n",
        "  'ElecTemp': [0.0, 'eV'],\n",
        "  'BoseTemp': [-1.0, 'eV'],\n",
        "  'OccTresh': [1e-05, ''],\n",
        "  'NLogCPUs': [0.0, ''],\n",
        "  'MEM_tresh': [51200.0, 'Kb'],\n",
-       "  'FFTGvecs': [23133.0, 'RL'],\n",
+       "  'FFTGvecs': [0.0, 'RL'],\n",
        "  'X_and_IO_nCPU_LinAlg_INV': [-1.0, ''],\n",
        "  'X_Threads': [0.0, ''],\n",
        "  'DIP_Threads': [0.0, ''],\n",
@@ -1498,7 +1498,7 @@
        "  'XfnQP_E': [[0.0, 1.0, 1.0], ''],\n",
        "  'XfnQP_Wv': [[0.0, 0.0, 0.0], ''],\n",
        "  'XfnQP_Wc': [[0.0, 0.0, 0.0], ''],\n",
-       "  'QpntsRXp': [[1, 331], ''],\n",
+       "  'QpntsRXp': [[1, '-1'], ''],\n",
        "  'BndsRnXp': [[1, 500], ''],\n",
        "  'EhEngyXp': [['-1.000000', '-1.000000'], 'eV'],\n",
        "  'LongDrXp': [[1.0, 0.0, 0.0], ''],\n",
@@ -1506,18 +1506,18 @@
        "  'GfnQP_Wv': [[0.0, 0.0, 0.0], ''],\n",
        "  'GfnQP_Wc': [[0.0, 0.0, 0.0], ''],\n",
        "  'GbndRnge': [[1, 500], ''],\n",
-       "  'QPkrange': [[1, 331, 25, 32], ''],\n",
-       "  'QPerange': [[1, 331, 0.0, '-1.000000'], ''],\n",
+       "  'QPkrange': [[1, 0, 25, 32], ''],\n",
+       "  'QPerange': [[1, 0, 0.0, '-1.000000'], ''],\n",
        "  'RandGvecW': [10, 'RL'],\n",
        "  'SE_ROLEs': 'q.qp.b',\n",
        "  'SE_CPU': '2.2.16',\n",
        "  'X_and_IO_ROLEs': 'q.g.k.c.v',\n",
-       "  'X_and_IO_CPU': '1.1.1.32.2',\n",
+       "  'X_and_IO_CPU': '1.1.1.32.0',\n",
        "  'DIP_ROLEs': 'k.c.v',\n",
-       "  'DIP_CPU': '1.32.2'}}"
+       "  'DIP_CPU': '1.32.0'}}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1596,7 +1596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1629,7 +1629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1638,7 +1638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1687,7 +1687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1696,7 +1696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1706,16 +1706,32 @@
       "Run the selection [0, 1] with the parallel task_groups [[0, 1]] \n",
       "\n",
       "Run the task [0, 1] \n",
-      "run command: mpirun -np 16 ypp -F ypp_bands_dft_boltz.in -J ypp_bands_dft_boltz -C ypp_bands_dft_boltz\n",
-      "slurm submit:  cd GW_analysis-ONCV/kpoints_18-nbnds_500 ; sbatch job_ypp_bands_dft_boltz.sh\n",
-      "computation ypp_bands_dft_boltz is running...\n",
+      "delete job_out script: GW_analysis-ONCV/kpoints_42-nbnds_500/job_ypp_bands_gw_boltz.out\n",
+      "delete folder: GW_analysis-ONCV/kpoints_42-nbnds_500/ypp_bands_gw_boltz\n",
       "run command: mpirun -np 16 ypp -F ypp_bands_gw_boltz.in -J ypp_bands_gw_boltz -C ypp_bands_gw_boltz\n",
-      "slurm submit:  cd GW_analysis-ONCV/kpoints_18-nbnds_500 ; sbatch job_ypp_bands_gw_boltz.sh\n",
+      "slurm submit:  cd GW_analysis-ONCV/kpoints_42-nbnds_500 ; sbatch job_ypp_bands_gw_boltz.sh\n",
       "computation ypp_bands_gw_boltz is running...\n",
-      "computation ypp_bands_gw_boltz ended\n",
-      "Run performed in 02s\n",
+      "delete job_out script: GW_analysis-ONCV/kpoints_42-nbnds_500/job_ypp_bands_dft_boltz.out\n",
+      "delete folder: GW_analysis-ONCV/kpoints_42-nbnds_500/ypp_bands_dft_boltz\n",
+      "run command: mpirun -np 16 ypp -F ypp_bands_dft_boltz.in -J ypp_bands_dft_boltz -C ypp_bands_dft_boltz\n",
+      "slurm submit:  cd GW_analysis-ONCV/kpoints_42-nbnds_500 ; sbatch job_ypp_bands_dft_boltz.sh\n",
+      "computation ypp_bands_dft_boltz is running...\n",
       "computation ypp_bands_dft_boltz ended\n",
-      "Run performed in 05s\n",
+      "\n",
+      "        There are no o-* files.\n",
+      "        Maybe you have performed a computation that does not create any output file or wait_end_run\n",
+      "        and/or the dry_run option are active.\n",
+      "        Otherwise a possible error has occured during the computation\n",
+      "        \n",
+      "game_over string not found in report. Check the computation!\n",
+      "computation ypp_bands_gw_boltz ended\n",
+      "\n",
+      "        There are no o-* files.\n",
+      "        Maybe you have performed a computation that does not create any output file or wait_end_run\n",
+      "        and/or the dry_run option are active.\n",
+      "        Otherwise a possible error has occured during the computation\n",
+      "        \n",
+      "game_over string not found in report. Check the computation!\n",
       "Task [0, 1] ended \n",
       " \n"
      ]
@@ -1831,7 +1847,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1845,7 +1861,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
